# IPP_small

./: CMakeLists.txt  Makefile  README.md  array.c  array.h  charArray.c  charArray.h  errors.c  errors.h  input.c  input.h  labirinth.c  main.c  main.h  maleplikmakefile.md  poprawki_czesc_2.md  queue.c  queue.h  simulation.c  simulation.h  skrypt_komentarz.md  test.sh
